--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title> Welcome to Dragon travels</title>
 </head>
 
-<body>
+<body style="background-color: azure;">
     <div id="success" class="alert alert-success alert-dismissible fade" role="alert">
         <strong>Success!</strong> Your travel request has been successfully submitted
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
